--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,14 @@
         "start": "node server.js",
         "dev": "node --watch server.js"
     },
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "dependencies": {
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "sqlite3": "^5.1.7"
+        "sqlite3": "^5.0.2"
     }
 }
+
