--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,7 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DATA_DIR
-        value: /opt/render/project/src/data
-    disk:
-      name: kaziconnect-data
-      mountPath: /opt/render/project/src/data
-      sizeGB: 1
+      - key: TURSO_DATABASE_URL
+        sync: false   # Set this manually in Render dashboard
+      - key: TURSO_AUTH_TOKEN
+        sync: false   # Set this manually in Render dashboard
