--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,9 @@
         "node": ">=18.0.0"
     },
     "dependencies": {
+        "@libsql/client": "^0.14.0",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "sqlite3": "^5.0.2"
+        "express": "^4.18.2"
     }
 }
-
